// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render draggable point when isDraggable prop is true 1`] = `
<div
  className="my-3 px-3 py-2 flex justify-between items-center bg-gray-100 rounded"
>
  <div
    className="flex flex-col"
  >
    <span
      className="text-gray-600"
    >
      Balalayka
    </span>
    <span
      className="text-sm text-gray-400"
    >
      Some description
    </span>
  </div>
  <div
    className="flex items-center gap-1"
  >
    <div
      className="w-6 h-6 min-w-6 min-h-6"
    >
      Dragger
    </div>
    <button
      className="w-5 h-5 min-w-5 min-h-5"
      onClick={[Function]}
    >
      Clear
    </button>
  </div>
</div>
`;

exports[`should render non-draggable point by default 1`] = `
<div
  className="my-3 px-3 py-2 flex justify-between items-center bg-gray-100 rounded"
>
  <div
    className="flex flex-col"
  >
    <span
      className="text-gray-600"
    >
      Vodka
    </span>
    <span
      className="text-sm text-gray-400"
    >
      Some description
    </span>
  </div>
  <div
    className="flex items-center gap-1"
  >
    <button
      className="w-5 h-5 min-w-5 min-h-5"
      onClick={[Function]}
    >
      Clear
    </button>
  </div>
</div>
`;

exports[`should render non-draggable point when isDraggable prop is false 1`] = `
<div
  className="my-3 px-3 py-2 flex justify-between items-center bg-gray-100 rounded"
>
  <div
    className="flex flex-col"
  >
    <span
      className="text-gray-600"
    >
      Balalayka
    </span>
    <span
      className="text-sm text-gray-400"
    >
      Some description
    </span>
  </div>
  <div
    className="flex items-center gap-1"
  >
    <button
      className="w-5 h-5 min-w-5 min-h-5"
      onClick={[Function]}
    >
      Clear
    </button>
  </div>
</div>
`;
